# pyfuturedag

./: README.md  pyfuturedag.py  pyproject.toml
pyfuturedag/: core.py
test/: test_pyfuturedag.py
