[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfuturedag"
version = "0.0.1"
authors = [
  { name="Hao Hao Tan", email="helloharry66@gmail.com" },
]
description = "Lightweight Python DAG implementation using asyncio futures"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gudgud96/pyfuturedag"